# cmake-git-version-tracking

./: CMakeLists.txt  git.h.in  git2.h.in  git_watcher.cmake
tests/: test_make_clean.sh  test_modified_preconfig_file.sh
tests/hello-world/: main.cc
